--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>This is a header</header>
+    <main>
+        <article>The main Article</article>
+        <nav>
+            <ul>
+                <li><a href="home">Home</a></li>
+                <li><a href="About">About Us</a></li>
+                <li><a href="Blog">Our Blog</a></li>
+                <li><a href="Contacts">Contact US</a></li>
+                <li><a href="Suggestions">Suggestions box</a></li>
+            </ul>
+        </nav>
+        <aside>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis atque suscipit ullam similique! Officiis ad repudiandae voluptas et ipsam unde fugit, sed minima quo obcaecati aut, nobis voluptates delectus laborum!</aside>
+    </main>
+    <footer>Author: Kenneth Ruto</footer>
+</body>
+</html>
